# soroban-constructor-non-root-auth

./: Cargo.toml  Makefile  Readme.md
contracts/smart_contract/: Cargo.toml
contracts/smart_contract/src/: lib.rs  test.rs
contracts/smart_contract_wrapper/: Cargo.toml
contracts/smart_contract_wrapper/src/: lib.rs  test.rs
